wordpress/base/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: web
  selector:
    app: wordpress
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: default-route-openshift-image-registry.apps-crc.testing/dev/openshift-wordpress-git
        name: wordpress
        ports:
        - containerPort: 8080
          name: wordpress
#        volumeMounts:
#        - name: wordpress-persistent-storage
#          mountPath: /opt/app-root/src/pv-uploads
#      volumes:
#      - name: wordpress-persistent-storage
#        persistentVolumeClaim:
#          claimName: wp-pv-claim
