wordpress/base/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: wordpress
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: wordpress
